--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,10 +1,20 @@
 {{>layout/header}}
     <h1>canned coffee project index page</h1>
-    <img src="/image/mario.png" width="250" />
+    <img src="/image/aluminum_can.png" width="250" style="margin:auto"/>
     <div class="col-md-12">
+        {{!--login section--}}
+
         <div class="row">
             <div class="col-md-6">
                 <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+                {{#loginUserName}}
+                    Logged in as: <span id="user">{{loginUserName}}</span>
+                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                {{/loginUserName}}
+                {{!--when userName is not present, lognig btn will be active--}}
+                {{^loginUserName}}
+                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                {{/loginUserName}}
             </div>
         </div>
         {{!--lists--}}
@@ -26,7 +36,6 @@
                     <td>{{author}}</td>
                     <td>{{modifiedDate}}</td>
                 </tr>
-
             {{/posts}}
             </tbody>
         </table>
