--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -14,6 +14,7 @@
                 {{!--when userName is not present, lognig btn will be active--}}
                 {{^loginUserName}}
                     <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                    <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
                 {{/loginUserName}}
             </div>
         </div>
