--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,5 +1,5 @@
 {{>layout/header}}
-    <h1>canned coffee project index page ver.4</h1>
+    <h1>canned coffee project index page ver.5 -- 점심은 사리곰탕면</h1>
     <img src="/image/aluminum_can.png" width="250" style="margin:auto"/>
     <div class="col-md-12">
         {{!--login section--}}
